--- a/app/src/main/res/layout/content_utente_main.xml
+++ b/app/src/main/res/layout/content_utente_main.xml
@@ -64,7 +64,7 @@
         app:layout_constraintGuide_begin="20dp" />
 
     <Button
-        android:id="@+id/btnesci"
+        android:id="@+id/btnannulla"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="57dp"
