--- a/app/src/main/res/layout/content_admin_main.xml
+++ b/app/src/main/res/layout/content_admin_main.xml
@@ -48,7 +48,7 @@
         app:layout_constraintVertical_bias="0.575" />
 
     <Button
-        android:id="@+id/btnesci"
+        android:id="@+id/btnannulla"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="31dp"
