--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,8 +10,7 @@
         android:id="@+id/usrPlain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="46dp"
-        android:layout_marginEnd="23dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:fontFamily="@font/alike"
         android:inputType="textPersonName"
@@ -19,51 +18,89 @@
         app:layout_constraintStart_toEndOf="@+id/usrText"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/usrText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="15dp"
+        android:fontFamily="@font/alike"
+        android:text="Username"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@+id/usrPlain"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/pswrdText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="11dp"
+        android:layout_marginTop="109dp"
+        android:layout_marginEnd="15dp"
+        android:fontFamily="@font/alike"
+        android:text="Password"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toStartOf="@+id/pswrdPlain"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
         android:id="@+id/pswrdPlain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="17dp"
         android:ems="10"
         android:fontFamily="@font/alike"
         android:inputType="textPersonName"
+        app:layout_constraintBaseline_toBaselineOf="@+id/pswrdText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/pswrdText"
-        app:layout_constraintTop_toBottomOf="@+id/usrPlain" />
+        app:layout_constraintStart_toEndOf="@+id/pswrdText" />
+
+    <EditText
+        android:id="@+id/mailPlain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:ems="10"
+        android:fontFamily="@font/alike"
+        android:inputType="textPersonName"
+        android:text="e-Mail"
+        app:layout_constraintStart_toStartOf="@+id/telPlain"
+        app:layout_constraintTop_toBottomOf="@+id/telPlain" />
 
     <EditText
         android:id="@+id/nomePlain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="7dp"
-        android:layout_marginBottom="33dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
         android:fontFamily="@font/alike"
         android:inputType="textPersonName"
         android:text="Nome"
-        app:layout_constraintBottom_toTopOf="@+id/cognomePlain"
-        app:layout_constraintStart_toStartOf="@+id/cognomePlain" />
+        app:layout_constraintStart_toStartOf="@+id/pswrdText"
+        app:layout_constraintTop_toBottomOf="@+id/pswrdPlain" />
 
     <EditText
         android:id="@+id/cognomePlain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="301dp"
+        android:layout_marginTop="33dp"
         android:ems="10"
         android:fontFamily="@font/alike"
         android:inputType="textPersonName"
         android:text="Cognome"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/nomePlain"
+        app:layout_constraintTop_toBottomOf="@+id/nomePlain" />
 
     <EditText
         android:id="@+id/telPlain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="27dp"
         android:ems="10"
         android:fontFamily="@font/alike"
         android:inputType="textPersonName"
@@ -72,51 +109,10 @@
         app:layout_constraintTop_toBottomOf="@+id/cognomePlain" />
 
     <EditText
-        android:id="@+id/mailPlain"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="43dp"
-        android:layout_marginEnd="7dp"
-        android:ems="10"
-        android:fontFamily="@font/alike"
-        android:inputType="textPersonName"
-        android:text="e-Mail"
-        app:layout_constraintEnd_toEndOf="@+id/telPlain"
-        app:layout_constraintTop_toBottomOf="@+id/telPlain" />
-
-    <TextView
-        android:id="@+id/usrText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="13dp"
-        android:fontFamily="@font/alike"
-        android:text="Username"
-        android:textSize="20sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/usrPlain"
-        app:layout_constraintEnd_toStartOf="@+id/usrPlain"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/pswrdText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="11dp"
-        android:layout_marginBottom="6dp"
-        android:fontFamily="@font/alike"
-        android:text="Password"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/pswrdPlain"
-        app:layout_constraintEnd_toStartOf="@+id/pswrdPlain"
-        app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <EditText
         android:id="@+id/comunePlain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="9dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="30dp"
         android:ems="10"
         android:fontFamily="@font/alike"
         android:inputType="textPersonName"
@@ -128,12 +124,12 @@
         android:id="@+id/btnregistra"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="38dp"
+        android:layout_marginEnd="156dp"
+        android:layout_marginBottom="16dp"
         android:backgroundTint="@color/colorButton"
         android:fontFamily="@font/alike"
         android:text="Registrati"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/comunePlain"
-        app:layout_constraintStart_toEndOf="@+id/comunePlain" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
