--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/btnregistra"
+        app:layout_constraintBottom_toTopOf="@+id/registrationButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/username" />
@@ -61,12 +61,12 @@
         android:backgroundTint="@color/colorButton"
         android:fontFamily="@font/alike"
         android:text="Login"
-        app:layout_constraintBaseline_toBaselineOf="@+id/btnregistra"
-        app:layout_constraintEnd_toStartOf="@+id/btnregistra"
+        app:layout_constraintBaseline_toBaselineOf="@+id/registrationButton"
+        app:layout_constraintEnd_toStartOf="@+id/registrationButton"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/btnregistra"
+        android:id="@+id/registrationButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="85dp"
