--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -93,8 +93,9 @@
             android:layout_marginBottom="142dp"
             android:ems="10"
             android:fontFamily="@font/alike"
-            android:hint="@string/state"
             android:inputType="textPersonName"
+            android:text="Comune"
+            android:textColor="#383737"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/emailEditText"
             app:layout_constraintTop_toBottomOf="@+id/emailEditText" />
